apps/media/base/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: flaresolver 
        image: ghcr.io/flaresolverr/flaresolverr:latest
        ports:
        - name: proxy
          containerPort: 8191
          protocol: TCP
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - name: http
          containerPort: 9696
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /config
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: prowlarr-config
